--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node . index.js",
-    "test": "NODE_ENV=test jest --forceExit"
+    "test": "NODE_ENV=test jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "awilix": "^4.2.6",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
